--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.3",
     "@prisma/client": "^5.4.2",
+    "encoding": "^0.1.13",
     "firebase": "^10.4.0",
     "next": "^13.5.4",
     "next-auth": "^4.23.2",
