--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next-auth": "^4.23.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-quill": "^2.0.0",
     "swr": "^2.2.4"
   },
